--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,12 @@
 	<modules>
 		<module>course</module>
 		<module>core</module>
-	</modules>
+        <module>discovery</module>
+    </modules>
+
+	<properties>
+		<spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
+	</properties>
 
 	<dependencies>
 		<dependency>
@@ -62,5 +67,25 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+	<repositories>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+		</repository>
+	</repositories>
 
 </project>
