--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,16 @@
 
 	<properties>
 		<spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
+		<nimbus-jose.version>7.0</nimbus-jose.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
+			<version>${nimbus-jose.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
