--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <java.version>11</java.version>
         <maicon-core.version>1.0-SNAPSHOT</maicon-core.version>
+        <maicon-token.version>1.0-SNAPSHOT</maicon-token.version>
     </properties>
 
     <dependencies>
@@ -36,6 +37,12 @@
             <groupId>com.maicon.microservice</groupId>
             <artifactId>core</artifactId>
             <version>${maicon-core.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.maicon.microservice</groupId>
+            <artifactId>token</artifactId>
+            <version>${maicon-token.version}</version>
         </dependency>
     </dependencies>
 
