--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>discovery</module>
 		<module>gateway</module>
         <module>auth</module>
+        <module>token</module>
     </modules>
 
 	<properties>
